--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 Django==1.7.4
-dj-database-url==0.3.0
-dj-static==0.0.6
-django-toolbelt==0.0.1
-gunicorn==19.2.1
-psycopg2==2.6
-static3==0.5.1
+Pillow==2.7.0
+South==1.0
+Unidecode==0.04.17
+beautifulsoup4==4.3.2
+django-appconf==1.0.1
+django-compressor==1.4
+django-libsass==0.2
+django-modelcluster==0.5
+django-taggit==0.12.2
+django-treebeard==2.0
+html5lib==0.999
+libsass==0.6.2
+requests==2.5.1
+six==1.9.0
+unicodecsv==0.9.4
+wagtail==0.8.4
 wsgiref==0.1.2
