--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Pillow==2.7.0
 South==1.0
 Unidecode==0.04.17
 beautifulsoup4==4.3.2
+dj-database-url==0.3.0
 django-appconf==1.0.1
 django-compressor==1.4
 django-libsass==0.2
