--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dj-database-url==0.3.0
 dj-static==0.0.6
 django-appconf==1.0.1
 django-compressor==1.4
+django-database-storage==0.1.2
 django-libsass==0.2
 django-modelcluster==0.5
 django-taggit==0.12.2
