--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-libsass==0.2
 django-modelcluster==0.5
 django-taggit==0.12.2
 django-treebeard==2.0
+django-widget-tweaks==1.3
 html5lib==0.999
 libsass==0.6.2
 requests==2.5.1
