Added GA analytics support
Test Plan:
1. Set the GA Tracking code in the settings
2. Click on some links
3. Check the GA Dashboard

Reviewers: eszter

Reviewed By: eszter

Differential Revision: http://review.prcptm.nl/D9

--- a/nxtcity/settings.py.example
+++ b/nxtcity/settings.py.example
@@ -42,6 +42,8 @@ INSTALLED_APPS = (
     'taggit',
     'modelcluster',
 
+    'ganalytics',
+
     'wagtail.wagtailcore',
     'wagtail.wagtailadmin',
     'wagtail.wagtaildocs',
@@ -171,3 +173,5 @@ WAGTAIL_SITE_NAME = "NxtCity Amsterdam 2015"
 
 # Whether to use face/feature detection to improve image cropping - requires OpenCV
 WAGTAILIMAGES_FEATURE_DETECTION_ENABLED = False
+
+GANALYTICS_TRACKING_CODE = 'ENTER_YOUR_GA_TRACKING_CODE_HERE'
