--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ South==1.0
 Unidecode==0.04.17
 beautifulsoup4==4.3.2
 django-appconf==1.0.1
+django-ganalytics==0.4
 django-compressor==1.4
 django-libsass==0.2
 django-modelcluster==0.5
